# LABS

./: Pets.ipynb
1 semester/lab1-2/: lol
1 semester/lab10-11/: LABA11.c
1 semester/lab12/: LABA12.c
1 semester/lab13/: LABA13.c  set.h
1 semester/lab14/: LABA14.c
1 semester/lab15/: LABA15.c
1 semester/lab3/: сценарий3.odt
1 semester/lab5/: Pravila.txt
1 semester/lab7/: 7_Lr.txt
1 semester/lab8-9/: n9.c
2 semester/kp6/: kp6.c  read.c  student.h  write.c
2 semester/kp7/: complex.c  kp7.c
2 semester/kp8/: kp8.c
2 semester/kp9/: complex.h  help.c  read.c  sort.c  sort.h  tab.c  tab.h
2 semester/lab21/: gen.sh  laba21.sh
2 semester/lab23/: 23.c
2 semester/lab24/: LABA24.c
2 semester/lab26/: Makefile  Makefile2  lab26.c  stack.c  stack.h
3 semester/OOP/4/: CMakeLists.txt  Makefile  figures.h  main  main.cpp
3 semester/OOP/5/: CMakeLists.txt  list.h  main.cpp  test_01.txt  test_02.txt  trapeze.h
3 semester/OOP/6/: allocator.h  main.cpp  queue.h  rectangle.h  test_01.txt  test_02.txt  vertex.h
3 semester/OOP/7/: figures.hpp  file_vector.hpp  main.cpp  test_01.txt  test_02.txt
3 semester/os/lab6-8/: BinTree.hpp  CMakeLists.txt  Makefile  main.cpp  node.cpp  report6.odt  server.hpp
4 semester/data analysis/: english_premier_league.csv  rgr_ad_Ilinykh_201.ipynb  train_x_9.csv  train_y_9.csv  validation_x_9.csv  validation_y_9.csv
4 semester/practice/: Practic.ipynb  Practic_ver2.ipynb  Журнал_практика.docx
4 semester/programming systems/: 201 Ильиных лабы СП.docx
5 semester/DB/: Отчет БД.docx
6 semester/NM/: main.py  window.py
(+93 files in other folders)
